<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="120dp"
        android:paddingRight="150dp"
        android:paddingTop="30dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enquete"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/q_one"
            android:textSize="25dp" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male"
                android:textSize="25dp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/female"
                android:textSize="25dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/q_two"
            android:textSize="25dp" />

        <Spinner
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:entries="@array/age" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/where"
            android:textSize="25dp" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/where1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/from_web"
                    android:textSize="20dp" />

                <CheckBox
                    android:id="@+id/where2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/from_rel"
                    android:textSize="20dp" />

                <CheckBox
                    android:id="@+id/where3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_pos"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/where4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/from_frp"
                    android:textSize="20dp" />

                <CheckBox
                    android:id="@+id/where5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/from_inv"
                    android:textSize="20dp" />

                <CheckBox
                    android:id="@+id/where6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_otw"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/where7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/from_mfs"
                    android:textSize="20dp" />

                <CheckBox
                    android:id="@+id/where8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/from_gkk"
                    android:textSize="20dp" />

                <CheckBox
                    android:id="@+id/where9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_oth"
                    android:textSize="20dp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:drawableTop="@drawable/answer"
        android:enabled="false"
        android:onClick="send" />

</FrameLayout>